[package]
name = "for-mqttc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
chrono = "0.4.26"
custom-utils = "0.10.13"
log = "0.4.17"
anyhow = { version = "1.0.64"}
sled = "0.34.7"
serde = {version ="1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"] }
zerocopy = "0.6.0"
byteorder = "1.4.3"
config = {version="0.13.2", features = ["toml", "json"] }
toml_edit = "0.14.4"
indexmap = "1.9.1"
notify = "5.0.0"
thiserror = "1.0.37"
rand = "0.8.5"
flexi_logger = { version = "0.24.0", features = ["specfile_without_notification", "specfile", "colors"], default-features = false }
crossbeam-channel = "0.5.6"
for-mqtt-client = { git = "https://github.com/jm-observer/for-mqtt-client.git", features = ["tls"] }

bytes = "1.4.0"
lazy_static = "1.4.0"
pretty-hex = "0.3.0"
#piet = "0.6.2"
directories = "5.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
